SERVER-4989: MR: errors that happen during sharded post processing are ignored